--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.4
+      - name: Check envs
+        env:
+          JAVA_HOME: ${{ steps.setup-java.outputs.path }}
+        run: echo ${JAVA_HOME}
       - name: Prepare Release Artifacts with Maven
         uses: qcastel/github-actions-maven-release@master
         env:
