Print java_home [ci skip]

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,19 +37,17 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.4
-      - name: Check envs
-        env:
-          JAVA_HOME: ${{ steps.setup-java.outputs.path }}
-        run: echo ${JAVA_HOME}
       - name: Prepare Release Artifacts with Maven
         uses: qcastel/github-actions-maven-release@master
         env:
-          JAVA_HOME: ${{ steps.setup-java.outputs.path }}
+          JAVA_HOME: /usr/lib/jvm/java-11-openjdk/
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           maven-args: release:clean release:prepare -B -DdryRun=${{github.event.inputs.dryRun}} -Dtag=${{github.event.inputs.releaseVersion}} -DreleaseVersion=${{github.event.inputs.releaseVersion}} -DdevelopmentVersion=${{github.event.inputs.developmentVersion}} -Dnemesis.version=${{github.event.inputs.releaseVersion}} -s src/main/resources/settings.xml
       - name: Perform The Release
         uses: qcastel/github-actions-maven-release@master
+        env:
+          JAVA_HOME: /usr/lib/jvm/java-11-openjdk/
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           maven-args: release:perform -DdryRun=${{github.event.inputs.dryRun}} -s src/main/resources/settings.xml
