--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>io.nemesis</groupId>
     <artifactId>bom</artifactId>
-    <version>2.3.12.RELEASE</version>
+    <version>2.3.1.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Nemesis BOM</name>
@@ -137,16 +137,16 @@
         <codemirror-webjars.version>5.1</codemirror-webjars.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-collections4.version>4.4</commons-collections4.version>
-        <commons-fileupload.version>1.4</commons-fileupload.version>
+        <commons-fileupload.version>1.5</commons-fileupload.version>
         <commons-io.version>2.9.0</commons-io.version>
         <commons-vfs2.version>2.9.0</commons-vfs2.version>
         <commons-vfs2-s3.version>4.3.5-nemesis</commons-vfs2-s3.version>
         <commons-vfs2-azure.version>1.2.patched</commons-vfs2-azure.version>
         <commons-jcs.version>2.2.1</commons-jcs.version>
-        <commons-text.version>1.8</commons-text.version>
+        <commons-text.version>1.10.0</commons-text.version>
         <compile-testing.version>0.18</compile-testing.version>
         <cybersource.version>6.2.9</cybersource.version>
-        <cxf.version>3.3.6</cxf.version>
+        <cxf.version>3.4.10</cxf.version>
         <cxf-xjc-plugin.version>3.2.1</cxf-xjc-plugin.version>
         <cxf-codegen-plugin.version>3.2.2</cxf-codegen-plugin.version>
         <cxf.codegenplugin.forkmode>once</cxf.codegenplugin.forkmode>
@@ -180,7 +180,7 @@
         <graphql-spqr.version>0.0.4</graphql-spqr.version>
         <gridgain.version>6.6.9</gridgain.version>
         <guava.version>31.0.1-jre</guava.version>
-        <handlebars-webjars.version>4.0.2</handlebars-webjars.version>
+        <handlebars-webjars.version>4.7.7</handlebars-webjars.version>
         <hazelcast-quartz.version>1.0.4</hazelcast-quartz.version>
         <!--hibernate.version>5.2.17.Final</hibernate.version-->
         <hibernate.ogm.version>5.1.0.Final</hibernate.ogm.version>
@@ -245,7 +245,7 @@
         <jquerysoundmanager2-webjars.version>2.97a.20131201</jquerysoundmanager2-webjars.version>
         <jqueryflowplayer-webjars.version>6.0.4</jqueryflowplayer-webjars.version>
         <jsitemapgenerator.version>4.5</jsitemapgenerator.version>
-        <jsoup.version>1.14.3</jsoup.version>
+        <jsoup.version>1.15.3</jsoup.version>
         <json.version>20190722</json.version>
         <jsonwebtoken.version>0.9.1</jsonwebtoken.version>
         <jstree.version>3.3.3</jstree.version>
@@ -305,7 +305,7 @@
         <maven-jasmine-plugin.version>1.3.1.5</maven-jasmine-plugin.version>
         <maven-plugin-api.version>3.5.0</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.5</maven-plugin-annotations.version>
-        <metadata-extractor.version>2.12.0</metadata-extractor.version>
+        <metadata-extractor.version>2.18.0</metadata-extractor.version>
         <money-validation.version>2.0.0</money-validation.version>
         <mongodb-embedded.version>5.0.5</mongodb-embedded.version>
         <nemesis.version>${project.version}</nemesis.version>
@@ -317,7 +317,7 @@
         <openpdf.version>1.3.16</openpdf.version>
         <oracle.version>19.3.0.0</oracle.version>
         <orika.version>1.5.3-nemesis</orika.version>
-        <owasp.esapi.version>2.2.0.0</owasp.esapi.version>
+        <owasp.esapi.version>2.3.0.0</owasp.esapi.version>
         <paypal-sdk.version>2.15.122</paypal-sdk.version>
         <paypal-rest-sdk.version>1.14.0</paypal-rest-sdk.version>
         <proguard.version>5.2.1</proguard.version>
@@ -331,7 +331,7 @@
         <project-scm.id>github</project-scm.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <protobuf.version>3.10.0</protobuf.version>
+        <protobuf.version>3.16.3</protobuf.version>
         <protobuf-java-format.version>1.4</protobuf-java-format.version>
         <powermock.version>2.0.7</powermock.version>
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
@@ -391,12 +391,12 @@
         <wagon.version>3.3.4</wagon.version>
         <wuic.version>0.5.2.RC1</wuic.version>
         <w3c-nu-validator.version>20.3.16</w3c-nu-validator.version>
-        <xerces.version>2.12.0</xerces.version>
+        <xerces.version>2.12.2</xerces.version>
         <xml-apis.version>1.4.01</xml-apis.version> <!-- xml-apis has latest version of 1.4.01 - do not UPDATE -->
         <xalan.version>2.7.2</xalan.version>
         <xe-rates-client.version>0.1.0</xe-rates-client.version>
         <xmpcore.version>6.1.10</xmpcore.version>
-        <xstream.version>1.4.18</xstream.version>
+        <xstream.version>1.4.19</xstream.version>
         <yandex-ashot.version>1.5.4</yandex-ashot.version>
         <yubico.version>3.1.0</yubico.version>
         <zxing.version>3.5.1</zxing.version>
