Use mvn repo servers secret [ci-skip]

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,7 @@ jobs:
           NEMESIS_REPOSITORY_HTTP_PASSWORD: ${{ secrets.NEMESIS_REPOSITORY_HTTP_PASSWORD }}
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
           maven-args: -B -DdryRun=${{github.event.inputs.dryRun}} -Dtag=${{github.event.inputs.releaseVersion}} -Dnemesis.version=${{github.event.inputs.releaseVersion}} -s src/main/resources/settings.xml
           maven-development-version-number: ${{github.event.inputs.developmentVersion}}
           maven-release-version-number: ${{github.event.inputs.releaseVersion}}
@@ -55,6 +56,7 @@ jobs:
           NEMESIS_REPOSITORY_HTTP_PASSWORD: ${{ secrets.NEMESIS_REPOSITORY_HTTP_PASSWORD }}
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          maven-servers: ${{ secrets.MVN_REPO_SERVERS }}
           maven-args: -DdryRun=${{github.event.inputs.dryRun}} -s src/main/resources/settings.xml
           maven-development-version-number: ${{github.event.inputs.developmentVersion}}
           maven-release-version-number: ${{github.event.inputs.releaseVersion}}
