--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,7 @@
         <javax-inject.version>1</javax-inject.version>
         <jakarta-jstl.version>3.0.0</jakarta-jstl.version>
         <javax-activation.version>1.2.0</javax-activation.version>
+        <javax-annotation.version>1.3.2</javax-annotation.version> <!-- we can remove once moneta has a new version -->
         <javax-xml-soap.version>1.4.0</javax-xml-soap.version>
         <javax-interceptor.version>1.2.2</javax-interceptor.version>
         <javax-jws.version>1.1</javax-jws.version>
@@ -253,7 +254,6 @@
         <jstree.version>3.3.3</jstree.version>
         <jstree-bootstrap-theme.version>1.0.1</jstree-bootstrap-theme.version>
         <license-maven-plugin>1.20</license-maven-plugin>
-        <log4j2.version>2.17.1</log4j2.version>
         <lutung.version>0.0.8</lutung.version>
         <kie.version>7.74.1.Final</kie.version>
         <klarna-sdk.version>4.0.3</klarna-sdk.version>
@@ -537,11 +537,6 @@
                         <artifactId>commons-lang</artifactId>
                     </exclusion>
                 </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-web</artifactId>
-                <version>${log4j2.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.apis</groupId>
@@ -946,11 +941,6 @@
                 <groupId>nz.net.ultraq.thymeleaf</groupId>
                 <artifactId>thymeleaf-layout-dialect</artifactId>
                 <version>${thymeleaf-layout-dialect.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.thymeleaf.extras</groupId>
-                <artifactId>thymeleaf-extras-java8time</artifactId>
-                <version>${thymeleaf-extras.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.timgroup</groupId>
@@ -1528,6 +1518,11 @@
                 <groupId>javax.measure</groupId>
                 <artifactId>unit-api</artifactId>
                 <version>${javauom.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.annotation</groupId> <!-- we can remove once moneta has a new version -->
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${javax-annotation.version}</version>
             </dependency>
             <dependency>
                 <groupId>tech.units</groupId>
