--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>io.nemesis</groupId>
     <artifactId>bom</artifactId>
-    <version>2.3.12.RELEASE</version>
+    <version>2.3.13.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Nemesis BOM</name>
@@ -260,7 +260,7 @@
         <maleorang.version>3.0-0.9.8</maleorang.version>
         <materializecss-webjars.version>0.98.1</materializecss-webjars.version>
         <maven-archetype-plugin.version>3.1.2</maven-archetype-plugin.version>
-        <maven-filtering.version>3.1.1</maven-filtering.version>
+        <maven-filtering.version>3.3.1</maven-filtering.version>
         <maven-artifact-manager.version>2.2.1</maven-artifact-manager.version>
         <maven-war-plugin.version>3.1.0</maven-war-plugin.version>
         <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
